--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1134,7 +1134,7 @@ endif()
 if(NOT QMC_NO_SLOW_CUSTOM_TESTING_COMMANDS)
   include("CMake/FindDIRAC.cmake")
   if(DIRAC_FOUND)
-    message(STATUS "Found and using DIRAC at ${DIRAC_EXE}")
+    message(STATUS "Found and using DIRAC at ${DIRAC_LAUNCHER}")
   else(DIRAC_FOUND)
     message(STATUS "Did not find DIRAC. DIRAC tests will not be run.")
   endif(DIRAC_FOUND)
