--- a/tests/dirac/CMakeLists.txt
+++ b/tests/dirac/CMakeLists.txt
@@ -14,5 +14,8 @@ endif()
 if(NOT ${QMCAPP_ERR} STREQUAL "")
   message("${QMCAPP_ERR}  skipping tests")
 else()
-  message("Running DIRAC tests with ${DIRAC_LAUNCHER}")
+  include("${qmcpack_SOURCE_DIR}/CMake/run_dirac.cmake")
+  set(LAST_TEST_NAME "NONE")
+  set(DIRAC_TEST_NAME "NONE")
+
 endif()
